@@ -311,7 +311,7 @@ EOD;
 		if (isset($button['visible']) && !$this->evaluateExpression($button['visible'],array('row'=>$row,'data'=>$data)))
   			return;
 		$label=isset($button['label']) ? $button['label'] : $id;
-		$url=isset($button['url']) ? $this->evaluateExpression($button['url'],array('data'=>$data,'row'=>$row)) : '#';
+		$url=isset($button['url']) ? $this->evaluateExpression($button['url'],array('row'=>$row,'data'=>$data)) : '#';
 		$options=isset($button['options']) ? $button['options'] : array();
 		if(!isset($options['title']))
 			$options['title']=$label;
